# insyncbee

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  releases.json
.github/workflows/: deploy-portal.yml  release-db-service.yml  release.yml  test.yml
Vibecoding/: Instructions.md  deployment.md  marketing.md
crates/insyncbee-core/: Cargo.toml
crates/insyncbee-core/src/: auth.rs  db.rs  drive.rs  error.rs  lib.rs  sync_engine.rs  watcher.rs
crates/insyncbee-core/src/db/: migrations.rs  models.rs
crates/insyncbee-core/tests/: conflict_policies.rs  db_models.rs  hash_property.rs  sync_engine.rs  watcher_integration.rs
crates/insyncbee-core/tests/common/: mod.rs
crates/insyncbee-daemon/: Cargo.toml
crates/insyncbee-daemon/src/: main.rs
crates/insyncbee-daemon/tests/: cli.rs
docs/: USAGE.md
insyncbee.portal/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
insyncbee.portal/src/: App.tsx  index.css
insyncbee.portal/src/assets/: Logo.tsx
insyncbee.portal/src/components/: Compare.tsx  Download.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx
insyncbee.portal/src/data/: releases.test.ts  releases.ts
insyncbee.portal/tests/e2e/: smoke.spec.ts
k8s/portal/: deployment.yaml  ingress.yaml  namespace.yaml
scripts/: build.sh  deploy-k3s.sh  dev-cli.sh  dev-gui.sh  dev-portal.sh  dev.sh  setup.sh  upload-release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: README.md
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  styles.css
