[package]
name = "insyncbee-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core sync engine library for InSyncBee"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
oauth2 = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
url = "2"
open = "5"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
